--- a/movieproject/templates/base.html
+++ b/movieproject/templates/base.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>index</title>
+    <title>Movies</title>
        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="{% static 'style.css' %}">
         <script src="https://kit.fontawesome.com/a076d05399.js"></script>
