--- a/movieproject/static/style.css
+++ b/movieproject/static/style.css
@@ -27,6 +27,9 @@ h2{
     background-color:#BDCBD0;
     padding-bottom:30px;
     padding-top:20px;
+    margin-left:25px;
+    margin-right:25px;
+    border-radius:15px;
 }
 
 .my-btn{
