--- a/movieproject/templates/base.html
+++ b/movieproject/templates/base.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Movies</title>
+        
+    <meta name="viewport" content="width=device-width, initial-scale=1">
        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="{% static 'style.css' %}">
         <script src="https://kit.fontawesome.com/a076d05399.js"></script>
